Increased permgen for func tests.